--- a/package.json
+++ b/package.json
@@ -1,28 +1,25 @@
 {
   "name": "my-notepad-app",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "main": "main.js",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1"
+  },
+  "devDependencies": {
+    "concurrently": "^8.0.1",
+    "electron": "^29.0.0",
+    "electron-packager": "^17.1.1",
+    "wait-on": "^7.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "electron": "electron .",
+    "dev": "concurrently \"npm:start\" \"wait-on http://localhost:3000 && npm run electron\"",
+    "package-win": "npm run build && electron-packager . MyNotepadApp --platform=win32 --arch=x64 --out=dist --overwrite"
   },
   "browserslist": {
     "production": [
